[gd_scene load_steps=8 format=3 uid="uid://w37clktmv21o"]

[ext_resource type="Script" uid="uid://yhnv8teh55hq" path="res://UI/pause_menu.gd" id="1_exvrm"]
[ext_resource type="AudioStream" uid="uid://chje44afe8lgj" path="res://sound/forest-with-small-river-birds-and-nature-field-recording-6735.mp3" id="2_xv4gp"]
[ext_resource type="Texture2D" uid="uid://b7ura616hgb40" path="res://assets/battleback/battleback10.png" id="3_0b5ob"]
[ext_resource type="AudioStream" uid="uid://qw7yj3fk5hcf" path="res://sound/buttonclick.mp3" id="3_6frx1"]
[ext_resource type="AudioStream" uid="uid://cdfx4uq27o86v" path="res://sound/sound_coin.wav" id="3_l8fx3"]
[ext_resource type="Texture2D" uid="uid://ctww132n6akhb" path="res://assets/mainmenu/background.png" id="4_pqlge"]
[ext_resource type="Texture2D" uid="uid://422482ndl373" path="res://assets/mainmenu/background2.png" id="5_nben2"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_exvrm")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_xv4gp")
volume_db = -7.28
autoplay = true

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_l8fx3")
volume_db = -20.0

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0b5ob")

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
z_index = 1
layout_mode = 1
offset_right = 2560.0
offset_bottom = 1439.0
scale = Vector2(0.45, 0.45)
texture = ExtResource("4_pqlge")

[node name="TextureRect3" type="TextureRect" parent="."]
z_index = 1
layout_mode = 1
offset_right = 2560.0
offset_bottom = 1439.0
scale = Vector2(0.45, 0.45)
texture = ExtResource("5_nben2")

[node name="Panel" type="Panel" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -108.0
offset_right = 102.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "MAIN MENU"
horizontal_alignment = 1

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Panel/VBoxContainer/SaveButton"]
stream = ExtResource("3_6frx1")

[node name="LoadButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Load
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Panel/VBoxContainer/LoadButton"]
stream = ExtResource("3_6frx1")

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Panel/VBoxContainer/ResumeButton"]
stream = ExtResource("3_6frx1")

[node name="SettingsButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Panel/VBoxContainer/SettingsButton"]
stream = ExtResource("3_6frx1")

[node name="ExitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Exit
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Panel/VBoxContainer/ExitButton"]
stream = ExtResource("3_6frx1")
playback_type = 1

[node name="VersionNumber" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -104.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Version: 0.0.1"

[connection signal="mouse_entered" from="Panel/VBoxContainer/SaveButton" to="." method="_on_save_button_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/LoadButton" to="." method="_on_load_button_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/SettingsButton" to="." method="_on_settings_button_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
